# deeper-archive

./: .gitignore  Cargo.toml  Jenkinsfile  README.md  archive.toml  docker-compose.yaml
deeper-archive/: archive.toml
deeper-archive/src/: cli_opts.rs
deeper-decoder/: Cargo.toml
deeper-decoder/data/: v14_metadata_deeper.scale
deeper-decoder/src/: balance_decoder.rs  common.rs  credit_decoder.rs  delegation_decoder.rs  event_decoder.rs  extrinsics_decoder.rs  main.rs
migrations/: 20220401094452_balance_decoded.sql
src/: cli_opts.rs  main.rs
